Fix: Restaurar baseurl correcto para repositorio /blog

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Noticias de IA, Blockchain y Tutoriales de Referidos"
 author: "NachoWeb3"
 email: contacto@nachoweb3.com
 url: "https://nachoweb3.github.io"
-baseurl: ""
+baseurl: "/blog"
 
 # Redes sociales
 twitter_username: nachoweb3
